--- a/Programming Assignment/report/180631J_PA_EN4720.tex
+++ b/Programming Assignment/report/180631J_PA_EN4720.tex
@@ -667,7 +667,7 @@
 		
 		\begin{answer}
 			
-			The fundamental weaknesses of Bob's password scheme are follows.
+			The fundamental weaknesses of Bob's password scheme are as follows.
 			\begin{itemize}
 				\item Salt is not actually concatenated (applied) to the passwords; it is separate.
 				\item Password has been split into two parts making it easy to brute force them separately.
